[package]
name = "kernel"
version = "0.1.0"
authors = ["Haonan Xue <xuehaonan27@gmail.com>"]
edition = "2021"

[dependencies]
riscv = "0.11.1"
log = "0.4.22"
sbi-rt = { version = "0.0.3", features = ["legacy"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.10.0"
bitflags = "2.6.0"
xmas-elf = "0.9.1"
spin = "0.9.8"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
easy-fs = { path = "../easy-fs" }

[profile.release]
debug = true

[features]
default = ["profiling", "debug"]
debug = []
profiling = []
D_EXTENSION_ENABLED = []
